Fix spacing on logos

--- a/src/index.scss
+++ b/src/index.scss
@@ -42,16 +42,14 @@ header {
 }
 
 section#logos {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     align-items: center;
-    justify-content: space-between;
-    flex-direction: initial;
+    column-gap: 1rem;
 
     img {
         display: block;
-        flex-grow: 1;
-        flex-shrink: 1;
         width: 100%;
-        margin: 1em;
         max-height: 100px;
         object-fit: contain;
 
